@@ -40,7 +40,9 @@ Foundation, 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.*/
 #define HAVE_STDLIB_H		1
 #define HAVE_STDDEF_H		1
 #define HAVE_LIMITS_H		1
+#ifndef __STDC__
 #define __STDC__			1
+#endif
 
 #define ssize_t int
 
@@ -73,6 +75,6 @@ Foundation, 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.*/
 #pragma warning( disable : 4244 )
 #pragma warning( disable : 4090 )
 #pragma warning( disable : 4022 )
-#endif  _MSC_VER
+#endif  /* _MSC_VER */
 
-#endif /*CPP_VC_H_*/
+#endif  /*CPP_VC_H_*/
